devtools/laymos/test/fixtures/story-ejection/invalid/escaped-terminal.ts
import { terminal } from 'laymos/story';

export const escaped = terminal;
